--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
     <main>
         <div class="container">
             <section class="hero">
-                <h1>Amie - Contemporary Artist</h1>
-                <p>Creating thought-provoking art that explores the intersection of identity, nature, and modern society.</p>
+                <h1>Amie Holstein</h1>
+                <p>Artistic Journey</p>
                 <a href="projects.html" class="button">View Work</a>
             </section>
             
@@ -378,11 +378,11 @@
             <div class="footer-content">
                 <div class="footer-info">
                     <h3>Amie</h3>
-                    <p>Contemporary Artist</p>
-                    <p>Based in [City, Country]</p>
+                    <p>Artist</p>
+                    <p>Based in Salem OR, United States</p>
                     <div class="social-links">
-                        <a href="#" aria-label="Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
-                        <a href="#" aria-label="Twitter"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 4c-1 .5-2.16.84-3.38 1.02C17.45 4.39 16.26 4 15 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C7.37 9.08 4.47 7.47 2.53 4.95c-.38.66-.6 1.43-.6 2.25 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.52 8.52 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z"></path></svg></a>
+                        <a href="https://www.instagram.com/thesshackk/" aria-label="Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
+                        <a href="https://www.etsy.com/shop/Thesshackk" aria-label="Etsy"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.5 3H9.5C7.57 3 6 4.57 6 6.5v11C6 19.43 7.57 21 9.5 21h5c1.93 0 3.5-1.57 3.5-3.5V6.5C18 4.57 16.43 3 14.5 3zM10 7h4v2h-2v2h2v2h-2v2h2v2h-4v-2h2v-2h-2v-2h2V9h-2V7z"></path></svg></a>
                         <a href="#" aria-label="LinkedIn"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg></a>
                     </div>
                 </div>
